--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "watch": "tsc --watch",
-    "db:init": "ts-node src/scripts/initDb.ts"
+    "db:init": "ts-node src/scripts/initDb.ts",
+    "db:seed": "ts-node src/scripts/seedUsers.ts"
   },
   "keywords": [],
   "author": "",
